problems fixed and CSV file exported

--- a/analysis/scripts/EDA.ipynb
+++ b/analysis/scripts/EDA.ipynb
@@ -67,8 +67,8 @@
    "source": [
     "## Explore dataset\n",
     "\n",
-    "#### **Numerical Values**\n",
-    "- using describe function to have a general look at all the numerical values\n"
+    "#### **Profiling datas**\n",
+    "- using pandas profiling function to have a general look at all values\n"
    ]
   },
   {
@@ -163,6 +163,14 @@
    ],
    "source": [
     "# pf.profiling(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Numerical Values**\n",
+    "- using describe function to have a general look at all the numerical values\n"
    ]
   },
   {
